--- a/AngularBreeze/AB.Web/index.html
+++ b/AngularBreeze/AB.Web/index.html
@@ -83,7 +83,6 @@
     <script src="app/common/bootstrap/bootstrap.dialog.js"></script>
 
     <!-- app -->
-    <script src="app/admin/admin.js"></script>
     <script src="app/dashboard/dashboard.js"></script>
     <script src="app/layout/shell.js"></script>
     <script src="app/layout/sidebar.js"></script>
@@ -95,5 +94,7 @@
     <script src="app/services/model.js"></script>
     
     <script src="app/session/sessions.js"></script>
+    <script src="app/speaker/speakers.js"></script>
+    <script src="app/attendee/attendees.js"></script>
 </body>
 </html>
