--- a/AngularBreeze/AB.Web/index.html
+++ b/AngularBreeze/AB.Web/index.html
@@ -92,6 +92,7 @@
     <script src="app/services/directives.js"></script>
     <script src="app/services/entityManagerFactory.js"></script>    
     <script src="app/services/model.js"></script>
+    <script src="app/services/routemediator.js"></script>
     
     <script src="app/session/sessions.js"></script>
     <script src="app/speaker/speakers.js"></script>
