--- a/AngularBreeze/AB.Web/app/attendee/attendees.html
+++ b/AngularBreeze/AB.Web/app/attendee/attendees.html
@@ -20,7 +20,8 @@
                          subtitle="{{vm.attendeeFilteredCount}} / {{vm.attendeeCount}}"
                          right-text="{{vm.paging.currentPage}} / {{vm.paging.pageCount}}"></div>
                     <div class="widget-content user">
-                        <div class="padd list-flow" data-ng-repeat="a in vm.attendees">
+                        <div class="padd list-flow fader-animation" 
+                            data-ng-repeat="a in vm.attendees">
                             <div class="user">
                                 <img data-cc-img-person="{{a.imageSource}}" 
                                      class="img-polaroid stacked"/>
