Implemented repository pattern for the datacontext
Devided datacontext.js into separate repositories: repository.session,
repository.attendee, repository.speaker, repository.lookup and
repository collection repositories.js

--- a/AngularBreeze/AB.Web/index.html
+++ b/AngularBreeze/AB.Web/index.html
@@ -76,6 +76,9 @@
     <script src="app/dashboard/dashboard.js"></script>
     <script src="app/layout/shell.js"></script>
     <script src="app/layout/sidebar.js"></script>
+    <script src="app/session/sessions.js"></script>
+    <script src="app/speaker/speakers.js"></script>
+    <script src="app/attendee/attendees.js"></script>
 
     <!-- app Services -->
     <script src="app/services/datacontext.js"></script>
@@ -84,8 +87,11 @@
     <script src="app/services/model.js"></script>
     <script src="app/services/routemediator.js"></script>
     
-    <script src="app/session/sessions.js"></script>
-    <script src="app/speaker/speakers.js"></script>
-    <script src="app/attendee/attendees.js"></script>
+    <script src="app/services/repositories.js"></script>
+    <script src="app/services/repository.abstract.js"></script>
+    <script src="app/services/repository.attendee.js"></script>
+    <script src="app/services/repository.lookup.js"></script>
+    <script src="app/services/repository.session.js"></script>
+    <script src="app/services/repository.speaker.js"></script>
 </body>
 </html>
