--- a/AngularBreeze/AB.Web/app/speaker/speakers.html
+++ b/AngularBreeze/AB.Web/app/speaker/speakers.html
@@ -5,9 +5,9 @@
             <div class="row-fluid">
                 <div class="form-search">
                     <input class="input-medium search-query"
-                           data-ng-model="vm.speakerSearch"
-                           data-ng-keyup="vm.search($event)"
-                           placeholder="live search..." />
+                        data-ng-model="vm.speakerSearch"
+                        data-ng-keyup="vm.search($event)"
+                        placeholder="live search..." />
                     <div class="btn-group pull-right">
                         <a class="btn btn-info" data-ng-click="vm.refresh()"><i class="icon-refresh"></i><span>Refresh</span></a>
                     </div>
@@ -16,13 +16,16 @@
 
             <div class="row-fluid">
                 <div class="widget wviolet">
-                    <div data-cc-widget-header title="{{vm.title}}" 
-                        subtitle="{{vm.filteredSpeakers.length}} / {{vm.speakers.length}}"></div>
+                    <div data-cc-widget-header title="{{vm.title}}"
+                        subtitle="{{vm.filteredSpeakers.length}} / {{vm.speakers.length}}">
+                    </div>
                     <div class="widget-content user">
-                        <div class="padd list-flow" data-ng-repeat="s in vm.filteredSpeakers">
-                            <div class="user">
-                                <img data-cc-img-person="{{s.imageSource}}" 
-                                     class="img-polaroid stacked"/>
+                        <div class="padd list-flow"
+                            data-ng-repeat="s in vm.filteredSpeakers"
+                            data-ng-click="vm.gotoSpeaker(s)">
+                            <div class="user" title="Go to speaker details">
+                                <img data-cc-img-person="{{s.imageSource}}"
+                                    class="img-polaroid stacked" />
                                 <div class="name-stack">
                                     <h5>{{s.firstName}}</h5>
                                     <h5>{{s.lastName}}</h5>
