--- a/AngularBreeze/AB.Web/index.html
+++ b/AngularBreeze/AB.Web/index.html
@@ -78,6 +78,7 @@
     <script src="app/layout/sidebar.js"></script>
     <script src="app/session/sessions.js"></script>
     <script src="app/speaker/speakers.js"></script>
+    <script src="app/speaker/speakerdetail.js"></script>
     <script src="app/attendee/attendees.js"></script>
 
     <!-- app Services -->
