added save, cancel and has changes functionality
for speaker entity

--- a/AngularBreeze/AB.Web/app/speaker/speakerdetail.html
+++ b/AngularBreeze/AB.Web/app/speaker/speakerdetail.html
@@ -2,25 +2,25 @@
     <section class="matter">
         <div class="container-fluid">
 
-            <!--<div>
+            <div>
                 <button class="btn btn-info" data-ng-click="vm.goBack()">
                     <i class="icon-hand-left"></i>
                     Back
                 </button>
                 <button class="btn btn-info" data-ng-click="vm.cancel()"
-                    data-ng-disabled="!vm.canSave" disabled="disabled">
+                    data-ng-disabled="!vm.canSave">
                     <i class="icon-undo"></i>
                     Cancel
                 </button>
                 <button class="btn btn-info" data-ng-click="vm.save()"
-                    data-ng-disabled="!vm.canSave" disabled="disabled">
+                    data-ng-disabled="!vm.canSave">
                     <i class="icon-save"></i>
                     Save
                 </button>
-                <span data-ng-show="vm.hasChanges" class="dissolve-animation">
+                <span data-ng-show="vm.hasChanges" class="dissolve-animation ng-hide">
                     <i class="icon-asterisk icon-asterisk-large"></i>
                 </span>
-            </div>-->
+            </div>
 
             <div class="widget wgreen">
                 <div data-cc-widget-header title="{{vm.getTitle()}}"></div>
