--- a/AngularBreeze/AB.Web/app/speaker/speakerdetail.html
+++ b/AngularBreeze/AB.Web/app/speaker/speakerdetail.html
@@ -23,7 +23,8 @@
             </div>
 
             <div class="widget wgreen">
-                <div data-cc-widget-header title="{{vm.getTitle()}}"></div>
+                <div data-cc-widget-header 
+                    title="Edit {{vm.speaker.fullName || 'New Speaker'}}"></div>
                 <div class="widget-content user">
                     <div>
                         <div>
