added deleting functionality
// boostrap.dialog service is one that we have wrote on top of a
bootstrap-UI library to make it simplier to use

--- a/AngularBreeze/AB.Web/app/session/sessiondetail.html
+++ b/AngularBreeze/AB.Web/app/session/sessiondetail.html
@@ -13,9 +13,14 @@
                     Cancel
                 </button>
                 <button class="btn btn-info" data-ng-click="vm.save()"
-                    data-ng-disabled="!vm.canSave">
+                        data-ng-disabled="!vm.canSave">
                     <i class="icon-save"></i>
                     Save
+                </button>
+                <button class="btn btn-danger"
+                    data-ng-click="vm.deleteSession()">
+                    <i class="icon-trash"></i>
+                    Delete
                 </button>
                 <span data-ng-show="vm.hasChanges" class="dissolve-animation ng-hide">
                     <i class="icon-asterisk icon-asterisk-large"></i>
